syntax = "proto3";

package blog.v1;

option go_package = "github.com/Niket1997/blogger/blog/v1;blogv1";

service BlogService {
  rpc Create(CreateBlogRequest) returns (BlogResponse) {}
  rpc Get(GetBlogRequest) returns (BlogResponse) {}
  // TODO: can add multiple APIs here like getAllFromAuthor, getPopular, etc.
}

message CreateBlogRequest {
  string author_id = 1;
  string title = 2;
  string body = 3;
}

message GetBlogRequest {
  string title = 1;
}

message BlogResponse {
  string blog_id = 1;
  string author_id = 2;
  string title = 3;
  string body = 4;
  int64 published_at = 5;
  int64 updated_at = 6;
}